add some ui change

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #9BE8D8;
+  background: #FAFAFA;
 }
 
 .navbar-lewagon .navbar-collapse {
