--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -10,9 +10,9 @@ margin-bottom: 2.5%;
 }
 
 .info-card {
-  height: 120px;
+  height: 80px;
   width: auto;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .info-card-title {
@@ -36,4 +36,12 @@ margin-bottom: 2.5%;
 
 .super-card {
   background-color: #057E97;
+}
+
+.debt-breakdown {
+  background-color: #dffff0;
+}
+
+.debt-summary {
+  background-color: #ffffff;
 }
