--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container first_view">
-  <h2>Welcome, <%= @debt.name %></h2>
+  <h2>Welcome, <%= @debt.name %>!</h2>
 </div>
 
 
@@ -42,50 +42,37 @@
 <%# try to add bar chart %>
 <%# <%= bar_chart Payment.group(:next_payment_amount).next_payment_amount %>
 
-<div class="container mb-5 shadow-sm p-3 mb-1 rounded">
-  <h2>Debt Breakdown</h2>
-      <h5>Points you need to understand about your debt</h5>
+
+<div class="container mb-5 shadow-sm p-3 mb-1 debt-breakdown">
+  <h5>Debt Breakdown</h5>
+    <div class="shadow-sm p-2 mb-3 rounded debt-summary">
+      <h6>Summary of your debt</h6>
       <ul>
-        <li>The less you pay for monthly payment, the longer takes and end up paying relatively big.</li>
         <li>You borrowed <%= @debt.original_principal %> $, then you will end up paying <%= @payment_options[3].total_monthly_payment %> $ with this plan.</li>
-        <li> It means you are paying <%= @payment_options[3].total_monthly_payment - @debt.original_principal %> $ as extra.</li>
+        <li>It means you are paying <%= @payment_options[3].total_monthly_payment - @debt.original_principal %> $ as extra.</li>
+        <li>Expected date you finish payoff is <%= @payment_options[3].final_payment_date %>.</li>
+        <li>Possibly you can pay less and earlier if you choose right plan with EnDebt.</li>
         <%# <li>Why? this huge? Because the interest amount is calculated every month based on your remaining principal. Meaning paying too much interest.</li> %>
       </ul>
-<div class="container p-3">
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="50000">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <%= column_chart @data_all, colors: ["#78C1F3","#FFC93C"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
-      </div>
-      <div class="carousel-item">
-        <%= pie_chart @progress_data, colors: ["#78C1F3","#FFC93C"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
-      </div>
-      <div class="carousel-item">
-        <%= column_chart @data_total, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
-      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
-</div>
 
-  <div class="containr">
+  <div class="containr mb-3">
     <div class="row">
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
-          <p>Original Principal</p>
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
+          <div data-controller="popover">
+            <div data-action="mouseenter->popover#show mouseleave->popover#hide" class="relative">Original Principal</div>
+              <template data-popover-target="content">
+                <div data-popover-target="card shadow-lg absolute left-0">
+                  <p>This content is in a hidden template.</p>
+                </div>
+              </template>
+          </div>
           <%= @debt.original_principal %>
         </div>
       </div>
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
           <p>Remaining Balance</p>
           <%= @debt.remaining_principal %>
         </div>
@@ -93,14 +80,14 @@
     </div>
 
     <div class="row">
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
           <p>Expected Total Amount</p>
           <%= @payment_options[3].total_monthly_payment %>
         </div>
       </div>
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
           <p>Expected Interest Amount</p>
           <%= @payment_options[3].total_interest_amount %>
         </div>
@@ -108,20 +95,47 @@
     </div>
 
     <div class="row">
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
           <p>Monthly Principal</p>
           <%= @payment_options[3].monthly_payment_principal %>
         </div>
       </div>
-      <div class="col-6">
-        <div class="info-card shadow-sm p-3 mb-1 rounded">
+      <div class="col-12">
+        <div class="info-card shadow-sm p-2 m-1 rounded">
           <p>Expected Finish Date</p>
           <%= @payment_options[3].final_payment_date %>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="container p-3 shadow-sm mb-2 rounded debt-summary">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="50000">
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <%= column_chart @data_total, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
+        </div>
+        <div class="carousel-item active">
+          <%= column_chart @data_all, colors: ["#78C1F3","#FFC93C"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
+        </div>
+        <div class="carousel-item">
+          <%= pie_chart @progress_data, colors: ["#78C1F3","#FFC93C"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+</div>
+
 
 
 <div class="container">
