--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -63,7 +63,7 @@ max-height: 700px;
 }
 
 .fv-back-color {
-  background-color: #9BE8D8;
+  background: linear-gradient(#9BE8D8,#cfe8e3 ) ;
 }
 
 .second-section {
