--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -3,7 +3,10 @@
   <h2>Hey, how are you?? <%= @debt.name %></h2>
 </div>
 
-</div>
+<div id="particles-js"></div>
+<div id="wrapper">
+この中にコンテンツが入ります。
+<!--/wrapper--></div>
 
 <div class="container payment">
   <% @selected_payment_options.each do |option| %>
