--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,7 @@
 <%= render "shared/flashes" %>
 
     <%= yield %>
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!--自作のJS-->
   </body>
 </html>
