--- a/app/assets/stylesheets/debts/_new.scss
+++ b/app/assets/stylesheets/debts/_new.scss
@@ -6,3 +6,7 @@
   padding: 2% 2%;
   border-radius: 5%;
 }
+
+.container {
+  background-image: url("https://images.unsplash.com/photo-1462556791646-c201b8241a94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2065&q=80");
+}
