--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -20,7 +20,7 @@
   <%= simple_form_for [@debt] do |f| %>
 
    <div class="mb-3">
-    <%= f.input :name, label: "Name" %>
+    <%= f.input :name, label: false %>
    </div>
 
    <div class="mb-3">
