--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div id="particles-js" class="transparent"></div>
+<div id="particles-js" class="transparent" data-controller="confetti"></div>
 <div id="wrapper">
 <div class="container">
   <div class="container first_view">
@@ -107,9 +107,9 @@
     </div>
   <% end %>
 
-  <div class="confirm" data-controller="confetti">
+  <div class="confirm">
     <h3>Did you pay this month???</h3>
-    <%= link_to "Done", payment_options_paid_path, class: "btn btn-primary mt-3", data: {action: "click->confetti#celebrate"} %>
+    <%= link_to "Done", payment_options_paid_path(payment: true), class: "btn btn-primary mt-3" %>
   </div>
 
 </div>
