--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 <div class="container fv-back-color">
     <div class="row">
       <div class="col-12 p-2 mb-3">
-        <h1 class="main-word mt-2">Get EnDebt and Pay off your credit card debt as less as possible.</h1>
-        <p>We are here to help you to understand your debt and avoid to pay unexpectedly big extra amount.</p>
+        <h1 class="main-word mt-2">EnDebt...Outsmart your Credit Card Debt with a Swipe of a Finger.</h1>
+        <p>Your Portable Credit Card Debt Payment Platform</p>
       </div>
         <%= image_tag 'payapp.svg'%>
       <%# <div class="col-12">
@@ -22,21 +22,21 @@
     <div class="row">
       <div class="d-flex justify-content-center">
         <div class="col-12">
-          <h2 class="text-center m-4">Key points to pay off your debt as less as possible</h2>
+          <h2 class="text-center m-4">Key Points to Pay off Your Debt Quickly and Smartly</h2>
           <div class="point">
             <h4 class="text-center">Understand Debt</h4>
             <i class="fa-regular fa-lightbulb fa-3x d-flex justify-content-center" style="color: #08815d;"></i>
-            <p class="text-center">Usually the strucure of credit card deb is difficult and likely to pay extra</p>
+            <p class="text-center">Usually Credit Card Debt is difficult to fully understand and likely to include Hidden Charges</p>
           </div>
           <div class="point">
-            <h4 class="text-center mt-4">Pay off in quick</h4>
+            <h4 class="text-center mt-4">Pay It Off Quickly</h4>
             <i class="fa-solid fa-bolt fa-3x d-flex justify-content-center" style="color: #f2b969;"></i>
-            <p class="text-center">Usually the quicker pay, the less you pay in total, as interest you pay can be reduced</p>
+            <p class="text-center">Usually the Quicker You Pay, the Less You pay at the End, as Interest Payments are Reduced</p>
           </div>
           <div class="point">
-            <h4 class="text-center mt-4">Keep up</h4>
+            <h4 class="text-center mt-4">Payment Consistency</h4>
             <i class="fa-solid fa-handshake fa-3x d-flex justify-content-center" style="color: #2d8fb9;"></i>
-            <p class="text-center">Don't give up, you can do it! Let's make it together!</p>
+            <p class="text-center">It is all about Payment Consistency...We will be here to Support You!</p>
           </div>
         </div>
       </div>
@@ -52,18 +52,18 @@
     <div class="row">
       <div class="d-flex justify-content-center">
         <div class="col-12">
-          <h2 class="text-center m-4">3 Steps to pay off with EnDebt</h2>
+          <h2 class="text-center m-4">Let's Do It in The EnDebt Way.</h2>
           <div class="step">
-            <h4 class="text-center">1. Add your debt</h4>
-            <p class="text-center">Enter your credit card debt information to start</p>
+            <h4 class="text-center">1. Input your Debt Profile</h4>
+            <p class="text-center">Enter your debt details, income and expenses information</p>
           </div>
           <div class="point">
-            <h4 class="text-center mt-4">2. Find debt breakdown</h4>
-            <p class="text-center">See the information about your debt and understand it</p>
+            <h4 class="text-center mt-4">2. Understand Your Debt</h4>
+            <p class="text-center">Visualize Your Debt Information and Understand It</p>
           </div>
           <div class="point">
-            <h4 class="text-center mt-4">3. Select your plan</h4>
-            <p class="text-center">Select suggested payment plan and follow it</p>
+            <h4 class="text-center mt-4">3. Select a Repayment Plan</h4>
+            <p class="text-center">Visualize Your Selected Plan and Follow It</p>
           </div>
         </div>
       </div>
