several UI updates

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,14 +24,14 @@
         <div class="col-12">
           <h2 class="text-center m-4">Key Points to Pay off Your Debt Quickly and Smartly</h2>
           <div class="point">
-            <h4 class="text-center">Understand Debt</h4>
+            <h4 class="text-center">Understand Your Debt</h4>
             <i class="fa-regular fa-lightbulb fa-3x d-flex justify-content-center" style="color: #08815d;"></i>
-            <p class="text-center">Usually Credit Card Debt is difficult to fully understand and likely to include Hidden Charges</p>
+            <p class="text-center">Usually Credit Card Debt is difficult to Fully Understand and likely to include Hidden Charges</p>
           </div>
           <div class="point">
             <h4 class="text-center mt-4">Pay It Off Quickly</h4>
             <i class="fa-solid fa-bolt fa-3x d-flex justify-content-center" style="color: #f2b969;"></i>
-            <p class="text-center">Usually the Quicker You Pay, the Less You pay at the End, as Interest Payments are Reduced</p>
+            <p class="text-center">Usually the Quicker You Pay, the Less You Pay at the End, as Interest Payments are Reduced</p>
           </div>
           <div class="point">
             <h4 class="text-center mt-4">Payment Consistency</h4>
