--- a/app/assets/stylesheets/debts/_new.scss
+++ b/app/assets/stylesheets/debts/_new.scss
@@ -1,75 +1,67 @@
 .name_input {
   // display: flex;
   // justify-content: center;
-  background-color: #cff4fc;
+  background-color: #0aa2c0;
   // margin: 36% 36%;
-  padding-left: 4%;
+  padding-left: 5%;
+  padding-top: 2%;
+  padding-right: 5%;
+  padding-bottom: 2%;
   // padding-right: 8%;
-  margin-left: 8%;
+  // margin-left: 8%;
   // margin-right: 8%;
   border-radius: 5%;
 }
 
 
-.img {
-  overflow: hidden;
-  background-image: url("https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
-  max-width: 100%;
-  max-height: 50%;
+  // background-image: url("https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+
+  .banner {
+    background-size: cover;
+    background-position: center;
+    padding: 150px 0;
+  }
+
+  .banner h1 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 32px;
+    font-weight: bold;
+  }
+
+  .banner p {
+    font-size: 20px;
+    color: white;
+    opacity: .7;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  }
 
 
-}
-.main {
-display: flex;
-justify-content: space-between;
-align-items: center;
-width: 90%;
-padding-left: 0%;
-}
+  .avatar {
+    width: 40px;
+    border-radius: 50%;
+  }
 
-.flex-column {
-width: 100%;
-}
+  .avatar-large {
+    width: 56px;
+    border-radius: 50%;
+  }
 
-// #tooltip {
-//   background: #333;
-//   color: white;
-//   font-weight: bold;
-//   padding: 4px 8px;
-//   font-size: 13px;
-//   border-radius: 4px;
-// }
+  .avatar-bordered {
+    width: 40px;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+  }
 
-// #arrow,
-// #arrow::before {
-//   position: absolute;
-//   width: 8px;
-//   height: 8px;
-//   background: inherit;
-// }
+  .avatar-square {
+    width: 40px;
+    border-radius: 0px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+  }
 
-// #arrow {
-//   visibility: hidden;
-// }
-
-// #arrow::before {
-//   visibility: visible;
-//   content: '';
-//   transform: rotate(45deg);
-// }
-
-// #tooltip[data-popper-placement^='top'] > #arrow {
-//   bottom: -4px;
-// }
-
-// #tooltip[data-popper-placement^='bottom'] > #arrow {
-//   top: -4px;
-// }
-
-// #tooltip[data-popper-placement^='left'] > #arrow {
-//   right: -4px;
-// }
-
-// #tooltip[data-popper-placement^='right'] > #arrow {
-//   left: -4px;
-// }
+  .d-flex {
+    gap: 10px;
+  }
